--- a/TKV2026_soubory/sheet004.htm
+++ b/TKV2026_soubory/sheet004.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=945 style='border-collapse:
- collapse;table-layout:fixed;width:712pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=950 style='border-collapse:
+ collapse;table-layout:fixed;width:715pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=181 style='mso-width-source:userset;mso-width-alt:6619;
@@ -64,10 +64,10 @@ else
  width:63pt'>
  <col class=xl70 width=74 style='mso-width-source:userset;mso-width-alt:2706;
  width:56pt'>
- <col class=xl70 width=59 style='mso-width-source:userset;mso-width-alt:2157;
- width:44pt'>
- <col class=xl70 width=54 span=2 style='mso-width-source:userset;mso-width-alt:
- 1974;width:41pt'>
+ <col class=xl70 width=59 span=2 style='mso-width-source:userset;mso-width-alt:
+ 2157;width:44pt'>
+ <col class=xl70 width=54 style='mso-width-source:userset;mso-width-alt:1974;
+ width:41pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
@@ -79,12 +79,12 @@ else
   <td class=xl70 width=84 style='width:63pt'></td>
   <td class=xl70 width=74 style='width:56pt'></td>
   <td class=xl70 width=59 style='width:44pt'></td>
-  <td class=xl70 width=54 style='width:41pt'></td>
+  <td class=xl70 width=59 style='width:44pt'></td>
   <td class=xl70 width=54 style='width:41pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=12 height=58 class=xl182 style='height:43.5pt'>TOUR KRAJE
+  <td colspan=12 height=58 class=xl183 style='height:43.5pt'>TOUR KRAJE
   VYSOČINA 2026 - VÍTĚZOVÉ</td>
  </tr>
  <tr height=0 style='display:none'>
@@ -103,11 +103,11 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl195 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
-  border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
-  mso-pattern:black none'>Pořadí</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'>Pořadí</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -121,7 +121,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
@@ -150,9 +150,8 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl71 style='height:15.0pt'><span
-  style='mso-spacerun:yes'> </span></td>
+ <tr height=0 style='display:none'>
+  <td class=xl71><span style='mso-spacerun:yes'> </span></td>
   <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
@@ -190,7 +189,10 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'></td>
-  <td class=xl70></td>
+  <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'></td>
   <td class=xl70></td>
  </tr>
  <tr class=xl68 height=20 style='height:15.0pt'>
@@ -227,15 +229,35 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>U DEJVA</td>
+  <td class=xl70 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'>ÚVODNÍ</td>
   <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>Celkem</td>
   <td class=xl70></td>
-  <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>3</td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Babický Michal
   [CZE063138]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -247,26 +269,9 @@ else
   mso-pattern:black none'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
   mso-pattern:black none'>3</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Doležal Michal
-  [CZE055580]</td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
-  mso-pattern:black none'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
-  mso-pattern:black none'>2</td>
-  <td class=xl70></td>
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -281,61 +286,30 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
   mso-pattern:black none'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
   mso-pattern:black none'>2</td>
-  <td class=xl70></td>
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Šulgovskij Alex
   [CZE064273]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -346,13 +320,29 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -362,13 +352,13 @@ else
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70></td>
-  <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Rosecký Václav
   [CZE084601]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
@@ -379,9 +369,25 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -396,9 +402,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
@@ -1616,7 +1622,7 @@ else
   <td width=84 style='width:63pt'></td>
   <td width=74 style='width:56pt'></td>
   <td width=59 style='width:44pt'></td>
-  <td width=54 style='width:41pt'></td>
+  <td width=59 style='width:44pt'></td>
   <td width=54 style='width:41pt'></td>
   <td width=50 style='width:38pt'></td>
  </tr>
