--- a/TKV2026_soubory/sheet005.htm
+++ b/TKV2026_soubory/sheet005.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=1374 style='border-collapse:
- collapse;table-layout:fixed;width:1038pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1379 style='border-collapse:
+ collapse;table-layout:fixed;width:1041pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=181 style='mso-width-source:userset;mso-width-alt:6619;
@@ -64,10 +64,10 @@ else
  width:63pt'>
  <col class=xl70 width=74 style='mso-width-source:userset;mso-width-alt:2706;
  width:56pt'>
- <col class=xl70 width=59 style='mso-width-source:userset;mso-width-alt:2157;
- width:44pt'>
- <col class=xl70 width=54 span=2 style='mso-width-source:userset;mso-width-alt:
- 1974;width:41pt'>
+ <col class=xl70 width=59 span=2 style='mso-width-source:userset;mso-width-alt:
+ 2157;width:44pt'>
+ <col class=xl70 width=54 style='mso-width-source:userset;mso-width-alt:1974;
+ width:41pt'>
  <col class=xl70 width=50 span=10 style='width:38pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
@@ -79,7 +79,7 @@ else
   <td class=xl70 width=84 style='width:63pt'></td>
   <td class=xl70 width=74 style='width:56pt'></td>
   <td class=xl70 width=59 style='width:44pt'></td>
-  <td class=xl70 width=54 style='width:41pt'></td>
+  <td class=xl70 width=59 style='width:44pt'></td>
   <td class=xl70 width=54 style='width:41pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -93,8 +93,31 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=12 height=58 class=xl173 style='border-right:.5pt solid black;
+  <td colspan=12 height=58 class=xl177 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2026 - VÍTĚZOVÉ - DIDO</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt'></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -107,8 +130,12 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl195 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'>Pořadí</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -132,33 +159,6 @@ else
   <td class=xl70></td>
   <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
-  border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
-  mso-pattern:black none'>Pořadí</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=0 style='display:none'>
-  <td class=xl70></td>
-  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
-  text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
   <td class=xl70 style='border:.5pt solid windowtext'>301 DIDO</td>
@@ -181,8 +181,8 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
+ <tr height=0 style='display:none'>
+  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -243,7 +243,10 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'></td>
-  <td class=xl70></td>
+  <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -289,6 +292,10 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>U DEJVA</td>
+  <td class=xl70 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'>ÚVODNÍ</td>
   <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
@@ -303,23 +310,22 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Babický Michal
-  [CZE063138]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -333,19 +339,19 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Doležal Michal
-  [CZE055580]</td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -359,19 +365,19 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>3</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Brussmann Jiří
-  [CZE056087]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Babický Michal
+  [CZE063138]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -385,18 +391,19 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -414,15 +421,15 @@ else
   [CZE084601]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -441,14 +448,14 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -465,16 +472,16 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Šulgovskij Alex
   [CZE064273]</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2544,7 +2551,7 @@ else
   <td width=84 style='width:63pt'></td>
   <td width=74 style='width:56pt'></td>
   <td width=59 style='width:44pt'></td>
-  <td width=54 style='width:41pt'></td>
+  <td width=59 style='width:44pt'></td>
   <td width=54 style='width:41pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=50 style='width:38pt'></td>
