--- a/TKV2026_soubory/sheet006.htm
+++ b/TKV2026_soubory/sheet006.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=1272 style='border-collapse:
- collapse;table-layout:fixed;width:960pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1277 style='border-collapse:
+ collapse;table-layout:fixed;width:963pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
@@ -64,10 +64,10 @@ else
  width:63pt'>
  <col class=xl70 width=74 style='mso-width-source:userset;mso-width-alt:2706;
  width:56pt'>
- <col class=xl70 width=59 style='mso-width-source:userset;mso-width-alt:2157;
- width:44pt'>
- <col class=xl70 width=54 span=2 style='mso-width-source:userset;mso-width-alt:
- 1974;width:41pt'>
+ <col class=xl70 width=59 span=2 style='mso-width-source:userset;mso-width-alt:
+ 2157;width:44pt'>
+ <col class=xl70 width=54 style='mso-width-source:userset;mso-width-alt:1974;
+ width:41pt'>
  <col class=xl70 width=50 span=8 style='width:38pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
@@ -79,7 +79,7 @@ else
   <td class=xl70 width=84 style='width:63pt'></td>
   <td class=xl70 width=74 style='width:56pt'></td>
   <td class=xl70 width=59 style='width:44pt'></td>
-  <td class=xl70 width=54 style='width:41pt'></td>
+  <td class=xl70 width=59 style='width:44pt'></td>
   <td class=xl70 width=54 style='width:41pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -91,7 +91,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=12 height=58 class=xl182 style='height:43.5pt'>TOUR KRAJE
+  <td colspan=12 height=58 class=xl183 style='height:43.5pt'>TOUR KRAJE
   VYSOČINA 2026 - VÍTĚZOVÉ - DO</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -124,11 +124,11 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl195 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
-  border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
-  mso-pattern:black none'>Pořadí</td>
+  font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
+  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'>Pořadí</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -149,7 +149,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
@@ -231,7 +231,10 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'></td>
-  <td class=xl70></td>
+  <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -275,11 +278,14 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>U DEJVA</td>
+  <td class=xl70 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
+  background:#4F81BD;mso-pattern:black none'>ÚVODNÍ</td>
   <td class=xl68 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>Celkem</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -302,9 +308,9 @@ else
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#4F81BD;
   mso-pattern:black none'>2</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -326,9 +332,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -349,9 +355,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -372,9 +378,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -396,9 +402,9 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -410,18 +416,18 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
-  <td class=xl70 style='border:.5pt solid windowtext'></td>
   <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -432,17 +438,19 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext'></td>
+  <td class=xl70 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2332,7 +2340,7 @@ else
   <td width=84 style='width:63pt'></td>
   <td width=74 style='width:56pt'></td>
   <td width=59 style='width:44pt'></td>
-  <td width=54 style='width:41pt'></td>
+  <td width=59 style='width:44pt'></td>
   <td width=54 style='width:41pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=50 style='width:38pt'></td>
