--- a/TKV2026_soubory/sheet029.htm
+++ b/TKV2026_soubory/sheet029.htm
@@ -79,7 +79,7 @@ else
   <td class=xl70 width=64 style='width:48pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=15 height=58 class=xl173 style='border-right:.5pt solid black;
+  <td colspan=15 height=58 class=xl177 style='border-right:.5pt solid black;
   height:43.5pt'><span style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA
   2026 - ÚVODNÍ TURNAJ - 501 DO</td>
  </tr>
@@ -186,10 +186,11 @@ else
   font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#4F81BD;mso-pattern:black none'>Jméno</td>
-  <td class=xl109 style='border-left:none;font-size:11.0pt;color:white;
-  font-weight:700;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
-  background:#4F81BD;mso-pattern:black none'>Body<span
+  <td class=xl172 style='font-size:11.0pt;color:white;font-weight:700;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border-top:.5pt solid windowtext;
+  border-right:.5pt solid windowtext;border-bottom:.5pt solid #95B3D7;
+  border-left:none;background:#4F81BD;mso-pattern:black none'>Body<span
   style='mso-spacerun:yes'> </span></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -211,7 +212,7 @@ else
   238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none;border-left:none'>Strašil Pavel
   [CZE015487]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>1150</td>
+  <td class=xl82 style='border-left:none'>1150</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
